samples/_failures_safe/1761513232_8d4049_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04136364.c: In function ‘main’:
./samples/SAFE/__tmp_04136364.c:159:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  159 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_04136364.c:159:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_04136364.c:159:9: error: expected ‘;’ at end of input
  159 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_04136364.c:159:5: error: expected declaration or statement at end of input
  159 |     size
      |     ^~~~
